--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html>
 <head>
     <title>
-    The First Website
+        The First Website
     </title>
 
 </head>
 
 <body>
-    <h1>
-    CatPhotoApp
-    </h1>
-    <p>
-    Content
-    </p>
+    <main>
+        <h1>
+            CatPhotoApp
+        </h1>
+        <h2>
+            Cat Photos
+        </h2>
+        <!-- TODO: Add link to cat photos-->
+        <p>
+            See more cat photos in our gallery.
+        </p>
+    </main>
 
 </body>
 
